--- a/WildLifeApp/Base.lproj/Main.storyboard
+++ b/WildLifeApp/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="f53-FI-q5o">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="WLa-K0-R5y">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -312,20 +312,90 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="aq9-Vh-l7e">
-                                <rect key="frame" x="225.5" y="285" width="150" height="30"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="aq9-Vh-l7e">
+                                <rect key="frame" x="225" y="285" width="150" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="150" id="lgH-cr-wfb"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="k7u-Ou-sQ7">
+                                <rect key="frame" x="225" y="323" width="150" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="150" id="6EE-bK-EpN"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="V8q-0r-5H9">
+                                <rect key="frame" x="225" y="361" width="150" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="150" id="LeL-Qh-NGD"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="About Me" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fcA-3N-s3K">
+                                <rect key="frame" x="246" y="54" width="108" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dEv-9K-B0x">
+                                <rect key="frame" x="225" y="92" width="150" height="150"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="hualien" translatesAutoresizingMaskIntoConstraints="NO" id="kQP-j1-oT4">
+                                        <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="150" id="mmn-0N-XoI"/>
+                                            <constraint firstAttribute="width" constant="150" id="zbe-32-4Cw"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="150" id="BCv-2F-d2I"/>
+                                    <constraint firstItem="kQP-j1-oT4" firstAttribute="centerX" secondItem="dEv-9K-B0x" secondAttribute="centerX" id="Mom-R6-YHX"/>
+                                    <constraint firstItem="kQP-j1-oT4" firstAttribute="centerY" secondItem="dEv-9K-B0x" secondAttribute="centerY" id="cEd-wU-EDX"/>
+                                    <constraint firstAttribute="width" constant="150" id="ocA-7t-I3k"/>
+                                </constraints>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yPY-Ts-DgK">
+                                <rect key="frame" x="248.5" y="243" width="103" height="40"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="3Cc-cL-krN"/>
+                                    <constraint firstAttribute="width" constant="100" id="tHP-ln-2op"/>
+                                </constraints>
+                                <state key="normal" title="Select A Image">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="tHP-ln-2op"/>
+                                    </mask>
+                                </variation>
+                                <connections>
+                                    <action selector="imageButton:" destination="WLa-K0-R5y" eventType="touchUpInside" id="3Ta-Ne-WOF"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="k7u-Ou-sQ7" firstAttribute="centerX" secondItem="aq9-Vh-l7e" secondAttribute="centerX" id="3H6-DH-Yw8"/>
                             <constraint firstItem="aq9-Vh-l7e" firstAttribute="centerX" secondItem="6vu-gh-weG" secondAttribute="centerX" id="AWb-k7-Cj0"/>
+                            <constraint firstItem="dEv-9K-B0x" firstAttribute="top" secondItem="0wq-iN-lEu" secondAttribute="bottom" constant="72" id="Ggc-SH-EeU"/>
+                            <constraint firstItem="k7u-Ou-sQ7" firstAttribute="top" secondItem="aq9-Vh-l7e" secondAttribute="bottom" constant="8" id="OsQ-SW-30W"/>
+                            <constraint firstItem="fcA-3N-s3K" firstAttribute="centerX" secondItem="6vu-gh-weG" secondAttribute="centerX" id="YhL-wf-xmI"/>
                             <constraint firstItem="aq9-Vh-l7e" firstAttribute="centerY" secondItem="6vu-gh-weG" secondAttribute="centerY" id="aBL-DD-6ea"/>
+                            <constraint firstItem="V8q-0r-5H9" firstAttribute="centerX" secondItem="k7u-Ou-sQ7" secondAttribute="centerX" id="ano-nx-Bbr"/>
+                            <constraint firstItem="dEv-9K-B0x" firstAttribute="centerX" secondItem="6vu-gh-weG" secondAttribute="centerX" id="fcZ-dx-iWo"/>
                             <constraint firstItem="aq9-Vh-l7e" firstAttribute="centerX" secondItem="6vu-gh-weG" secondAttribute="centerX" id="ghb-mj-ubg"/>
+                            <constraint firstItem="yPY-Ts-DgK" firstAttribute="centerX" secondItem="kQP-j1-oT4" secondAttribute="centerX" id="ini-Tp-U6r"/>
+                            <constraint firstItem="fcA-3N-s3K" firstAttribute="top" secondItem="0wq-iN-lEu" secondAttribute="bottom" constant="34" id="jIV-Pe-iyZ"/>
+                            <constraint firstItem="V8q-0r-5H9" firstAttribute="top" secondItem="k7u-Ou-sQ7" secondAttribute="bottom" constant="8" id="ovA-Om-n9G"/>
+                            <constraint firstItem="yPY-Ts-DgK" firstAttribute="top" secondItem="kQP-j1-oT4" secondAttribute="bottom" constant="1" id="p50-pn-aOW"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
@@ -333,6 +403,11 @@
                             </mask>
                         </variation>
                     </view>
+                    <connections>
+                        <outlet property="myButton" destination="yPY-Ts-DgK" id="TrF-Je-CUY"/>
+                        <outlet property="myImage" destination="kQP-j1-oT4" id="Xu6-qX-vdb"/>
+                        <outlet property="myView" destination="dEv-9K-B0x" id="AQm-UA-WVE"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1hv-3u-gYP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -358,6 +433,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="hualien" width="1170" height="500"/>
         <image name="moon" width="800" height="600"/>
     </resources>
 </document>
